--- a/project/html/beta_test.html
+++ b/project/html/beta_test.html
@@ -54,25 +54,25 @@
                                     data-bs-toggle="dropdown">Other Groups</a>
                                 <ul class="dropdown-menu bg-dark">
                                     <li><a class="dropdown-item text-light p-2 p-md-3"
-                                            href="https://gruppe2.testsites.info/">Gruppe 2</a></li>
+                                            href="https://gruppe2.testsites.info/">Group 2</a></li>
                                     <li><a class="dropdown-item text-light p-2 p-md-3"
-                                            href="https://gruppe3.testsites.info/">Gruppe 3</a></li>
+                                            href="https://gruppe3.testsites.info/">Group 3</a></li>
                                     <li><a class="dropdown-item text-light p-2 p-md-3"
-                                            href="https://gruppe4.testsites.info/">Gruppe 4</a></li>
+                                            href="https://gruppe4.testsites.info/">Group 4</a></li>
                                     <li><a class="dropdown-item text-light p-2 p-md-3"
-                                            href="https://gruppe5.testsites.info/">Gruppe 5</a></li>
+                                            href="https://gruppe5.testsites.info/">Group 5</a></li>
                                     <li><a class="dropdown-item text-light p-2 p-md-3"
-                                            href="https://gruppe6.testsites.info/">Gruppe 6</a></li>
+                                            href="https://gruppe6.testsites.info/">Group 6</a></li>
                                     <li><a class="dropdown-item text-light p-2 p-md-3"
-                                            href="https://gruppe7.testsites.info/">Gruppe 7</a></li>
+                                            href="https://gruppe7.testsites.info/">Group 7</a></li>
                                     <li><a class="dropdown-item text-light p-2 p-md-3"
-                                            href="https://gruppe8.testsites.info/">Gruppe 8</a></li>
+                                            href="https://gruppe8.testsites.info/">Group 8</a></li>
                                     <li><a class="dropdown-item text-light p-2 p-md-3"
-                                            href="https://gruppe9.testsites.info/">Gruppe 9</a></li>
+                                            href="https://gruppe9.testsites.info/">Group 9</a></li>
                                     <li><a class="dropdown-item text-light p-2 p-md-3"
-                                            href="https://gruppe10.testsites.info/">Gruppe 10</a></li>
+                                            href="https://gruppe10.testsites.info/">Group 10</a></li>
                                     <li><a class="dropdown-item text-light p-2 p-md-3"
-                                            href="https://gruppe11.testsites.info/">Gruppe 11</a></li>
+                                            href="https://gruppe11.testsites.info/">Group 11</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item align-self-lg-center">
