--- a/project/html/home.html
+++ b/project/html/home.html
@@ -44,7 +44,7 @@
                         <div class="col-4 text-center d-none d-sm-block align-self-center">
                             <a class="text-light h1 text-decoration-none">
                                 <button type="submit"
-                                    class="form-control btn btn-outline-light btn-lg fw-bold rounded max-width-500"
+                                    class="form-control btn btn-outline-light btn-lg fw-bold rounded max-width-300"
                                     onclick="startLobbyPage()">Play</button>
                             </a>
                         </div>
@@ -72,25 +72,25 @@
                                                 <a class="nav-link text-light p-0 m-0">Other Groups</a>
                                                 <ul class="dropdown-menu dropdown-menu-end bg-dark">
                                                     <li><a class="dropdown-item text-light"
-                                                            href="https://gruppe2.testsites.info/">Gruppe 2</a></li>
+                                                            href="https://gruppe2.testsites.info/">Group 2</a></li>
                                                     <li><a class="dropdown-item text-light"
-                                                            href="https://gruppe3.testsites.info/">Gruppe 3</a></li>
+                                                            href="https://gruppe3.testsites.info/">Group 3</a></li>
                                                     <li><a class="dropdown-item text-light"
-                                                            href="https://gruppe4.testsites.info/">Gruppe 4</a></li>
+                                                            href="https://gruppe4.testsites.info/">Group 4</a></li>
                                                     <li><a class="dropdown-item text-light"
-                                                            href="https://gruppe5.testsites.info/">Gruppe 5</a></li>
+                                                            href="https://gruppe5.testsites.info/">Group 5</a></li>
                                                     <li><a class="dropdown-item text-light"
-                                                            href="https://gruppe6.testsites.info/">Gruppe 6</a></li>
+                                                            href="https://gruppe6.testsites.info/">Group 6</a></li>
                                                     <li><a class="dropdown-item text-light"
-                                                            href="https://gruppe7.testsites.info/">Gruppe 7</a></li>
+                                                            href="https://gruppe7.testsites.info/">Group 7</a></li>
                                                     <li><a class="dropdown-item text-light"
-                                                            href="https://gruppe8.testsites.info/">Gruppe 8</a></li>
+                                                            href="https://gruppe8.testsites.info/">Group 8</a></li>
                                                     <li><a class="dropdown-item text-light"
-                                                            href="https://gruppe9.testsites.info/">Gruppe 9</a></li>
+                                                            href="https://gruppe9.testsites.info/">Group 9</a></li>
                                                     <li><a class="dropdown-item text-light"
-                                                            href="https://gruppe10.testsites.info/">Gruppe 10</a></li>
+                                                            href="https://gruppe10.testsites.info/">Group 10</a></li>
                                                     <li><a class="dropdown-item text-light"
-                                                            href="https://gruppe11.testsites.info/">Gruppe 11</a></li>
+                                                            href="https://gruppe11.testsites.info/">Group 11</a></li>
                                                 </ul>
                                             </div>
                                         </li>
@@ -299,7 +299,7 @@
                         <div>
                             <p class="fs-5 ps-3">The game decides "randomly" who may start.
                                 When it's your turn, you get to open two cards in a row.
-                                If those two cards are the same, they remain face up, you get one point, it's your turn
+                                If those two cards are the same, they remain face up, you get one point and it's your turn
                                 again.
                                 If the cards are different, they are turned over again and it is the next player's turn.
                             </p>
@@ -310,7 +310,15 @@
                             <p class="fs-3 pt-0 pt-lg-5">Chat Guidlines</p>
                         </div>
                         <div>
-                            <p class="fs-5 ps-3">Do not insult!<br>Do not offend!<br>Be kind & have fun!</p>
+                            <li class="fs-5 ps-3">
+                                Do not insult!
+                             </li>
+                             <li class="fs-5 ps-3">
+                                Do not offend!
+                             </li>
+                             <li class="fs-5 ps-3">
+                                Be kind & have fun!
+                             </li>
                         </div>
                     </div>
                 </div>
