--- a/project/html/user_profile.html
+++ b/project/html/user_profile.html
@@ -43,7 +43,7 @@
                     <div class="col-4 text-center d-none d-sm-block align-self-center">
                         <a class="text-light h1 text-decoration-none">
                             <button type="submit"
-                                class="form-control btn btn-outline-light btn-lg fw-bold rounded max-width-500"
+                                class="form-control btn btn-outline-light btn-lg fw-bold rounded max-width-300"
                                 onclick="startLobbyPage()">Play</button>
                         </a>
                     </div>
@@ -64,31 +64,31 @@
                                             <p class="m-0">Settings</p>
                                         </div>
                                     </li>
-                                    <li class="mt-2">
+                                    <li class="mt-2" id="keep-open-dropdown">
                                         <div class="dropdown-item d-flex text-light dropstart">
                                             <i class="bi bi-people pe-3"></i>
-                                            <a class="nav-link dropdown-toggle text-light p-0 m-0">Other Groups</a>
+                                            <a class="nav-link text-light p-0 m-0">Other Groups</a>
                                             <ul class="dropdown-menu dropdown-menu-end bg-dark">
                                                 <li><a class="dropdown-item text-light"
-                                                        href="https://gruppe2.testsites.info/">Gruppe 2</a></li>
+                                                        href="https://gruppe2.testsites.info/">Group 2</a></li>
                                                 <li><a class="dropdown-item text-light"
-                                                        href="https://gruppe3.testsites.info/">Gruppe 3</a></li>
+                                                        href="https://gruppe3.testsites.info/">Group 3</a></li>
                                                 <li><a class="dropdown-item text-light"
-                                                        href="https://gruppe4.testsites.info/">Gruppe 4</a></li>
+                                                        href="https://gruppe4.testsites.info/">Group 4</a></li>
                                                 <li><a class="dropdown-item text-light"
-                                                        href="https://gruppe5.testsites.info/">Gruppe 5</a></li>
+                                                        href="https://gruppe5.testsites.info/">Group 5</a></li>
                                                 <li><a class="dropdown-item text-light"
-                                                        href="https://gruppe6.testsites.info/">Gruppe 6</a></li>
+                                                        href="https://gruppe6.testsites.info/">Group 6</a></li>
                                                 <li><a class="dropdown-item text-light"
-                                                        href="https://gruppe7.testsites.info/">Gruppe 7</a></li>
+                                                        href="https://gruppe7.testsites.info/">Group 7</a></li>
                                                 <li><a class="dropdown-item text-light"
-                                                        href="https://gruppe8.testsites.info/">Gruppe 8</a></li>
+                                                        href="https://gruppe8.testsites.info/">Group 8</a></li>
                                                 <li><a class="dropdown-item text-light"
-                                                        href="https://gruppe9.testsites.info/">Gruppe 9</a></li>
+                                                        href="https://gruppe9.testsites.info/">Group 9</a></li>
                                                 <li><a class="dropdown-item text-light"
-                                                        href="https://gruppe10.testsites.info/">Gruppe 10</a></li>
+                                                        href="https://gruppe10.testsites.info/">Group 10</a></li>
                                                 <li><a class="dropdown-item text-light"
-                                                        href="https://gruppe11.testsites.info/">Gruppe 11</a></li>
+                                                        href="https://gruppe11.testsites.info/">Group 11</a></li>
                                             </ul>
                                         </div>
                                     </li>
@@ -109,9 +109,9 @@
 
     <main class="my-auto p-3">
         <div>
-            <div class="container-sm my-auto border border-light rounded-3 p-0 max-width-500">
+            <div class="container-sm my-auto border border-light rounded-3 p-0 max-width-600">
                 <div class="text-center text-light fs-3 border-bottom border-light">
-                    <p id="usernameHomePage" class="py-3 m-0"></p>
+                    <p class="py-3 m-0 ">Your Stats</p>
                 </div>
                 <div>
                     <table class="table text-light table-borderless">
